v8/en/16_SQL_Statements/01_Data_Definition_Statements/index.md
## 15.1 Data Definition Statements

[15.1.1 Atomic Data Definition Statement Support](atomic-ddl.html)

[15.1.2 ALTER DATABASE Statement](alter-database.html)

[15.1.3 ALTER EVENT Statement](alter-event.html)

[15.1.4 ALTER FUNCTION Statement](alter-function.html)

[15.1.5 ALTER INSTANCE Statement](alter-instance.html)

[15.1.6 ALTER LOGFILE GROUP Statement](alter-logfile-group.html)

[15.1.7 ALTER PROCEDURE Statement](alter-procedure.html)

[15.1.8 ALTER SERVER Statement](alter-server.html)

[15.1.9 ALTER TABLE Statement](alter-table.html)

[15.1.10 ALTER TABLESPACE Statement](alter-tablespace.html)

[15.1.11 ALTER VIEW Statement](alter-view.html)

[15.1.12 CREATE DATABASE Statement](create-database.html)

[15.1.13 CREATE EVENT Statement](create-event.html)

[15.1.14 CREATE FUNCTION Statement](create-function.html)

[15.1.15 CREATE INDEX Statement](create-index.html)

[15.1.16 CREATE LOGFILE GROUP Statement](create-logfile-group.html)

[15.1.17 CREATE PROCEDURE and CREATE FUNCTION Statements](create-procedure.html)

[15.1.18 CREATE SERVER Statement](create-server.html)

[15.1.19 CREATE SPATIAL REFERENCE SYSTEM Statement](create-spatial-reference-system.html)

[15.1.20 CREATE TABLE Statement](create-table.html)

[15.1.21 CREATE TABLESPACE Statement](create-tablespace.html)

[15.1.22 CREATE TRIGGER Statement](create-trigger.html)

[15.1.23 CREATE VIEW Statement](create-view.html)

[15.1.24 DROP DATABASE Statement](drop-database.html)

[15.1.25 DROP EVENT Statement](drop-event.html)

[15.1.26 DROP FUNCTION Statement](drop-function.html)

[15.1.27 DROP INDEX Statement](drop-index.html)

[15.1.28 DROP LOGFILE GROUP Statement](drop-logfile-group.html)

[15.1.29 DROP PROCEDURE and DROP FUNCTION Statements](drop-procedure.html)

[15.1.30 DROP SERVER Statement](drop-server.html)

[15.1.31 DROP SPATIAL REFERENCE SYSTEM Statement](drop-spatial-reference-system.html)

[15.1.32 DROP TABLE Statement](drop-table.html)

[15.1.33 DROP TABLESPACE Statement](drop-tablespace.html)

[15.1.34 DROP TRIGGER Statement](drop-trigger.html)

[15.1.35 DROP VIEW Statement](drop-view.html)

[15.1.36 RENAME TABLE Statement](rename-table.html)

[15.1.37 TRUNCATE TABLE Statement](truncate-table.html)